@@ -1206,7 +1206,7 @@ gboolean symbols_goto_tag(const gchar *name, gboolean definition)
 			new_idx = document_open_file(tmtag->atts.entry.file->work_object.file_name, FALSE, NULL, NULL);
 		}
 
-		if (navqueue_goto_line(old_idx, new_idx, tmtag->atts.entry.line))
+		if (navqueue_goto_line(documents[old_idx], documents[new_idx], tmtag->atts.entry.line))
 			return TRUE;
 	}
 	/* if we are here, there was no match and we are beeping ;-) */
